fix overflow y hiden gay name

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -52,3 +52,7 @@ ion-slide {
   overflow-y: auto;
   display: block;
 }
+
+.slide-zoom {
+  margin-top: 170px!important;
+}
